CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(CREST)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/third-party)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/benchmark)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(benchmark)
# ADD_SUBDIRECTORY(test)